--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ html {
 body {
   font-family: "Goldman", cursive;
   background-color: #00a8c7;
+  background-image: url(background.jpeg);
+  background-size: 1080px;
+  background-size: ;
 }
 
 nav {
@@ -37,4 +40,20 @@ nav a {
 }
 nav img {
   width: 5vw;
+}
+
+footer{
+  display: flex;
+  width: 100%;
+  padding: 2rem;
+  min-height: 10vh;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: auto;
+  background: #00a8c7;
+  justify-content: space-between;
+  position: fixed;
+  bottom: 0;
+  
+  
 }
