--- a/style.css
+++ b/style.css
@@ -7,16 +7,23 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: "Goldman", cursive;
-  background-color: #00a8c7;
-  background-image: url(background.jpeg);
-  background-size: 1080px;
+    font-family: "Goldman", cursive;
+    background-color: black;
+    background-image: url(background.jpeg);
+    background-position: center;
+    background-repeat: no-repeat;
+    text-align: center;
+    font-weight: bold;
+    
+
   
 }
 
 nav {
   display: flex;
   width: 100%;
+  height: 100px;
+  flex-shrink: 0;
   padding: 2rem;
   min-height: 10vh;
   align-items: center;
@@ -24,6 +31,7 @@ nav {
   margin: auto;
   background: #00a8c7;
   justify-content: space-between;
+  position: sticky;
 }
 nav ul {
   display: flex;
@@ -54,6 +62,9 @@ footer{
   justify-content: space-between;
   position: fixed;
   bottom: 0;
+}
   
-  
+.container{
+    color: white;
+    font-family: "goldman"
 }
