--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     font-family: "Goldman", cursive;
     background-color: black;
     background-image: url(background.jpeg);
-    background-position: center;
+    background-position: center fixed;
     background-repeat: no-repeat;
     background-size: cover;
     height: 900px;
